syntax = "proto3";
option go_package = "github.com/vemolista/itu-ds-assignment4/proto";

message RequestAccessRequest {
    string nodeId = 1;
    int64 timestamp = 2;
}

message RequestAccessResponse {
    
}

message ReplyRequest {

}

message ReplyResponse {

}

message Empty {
    
}

service RicartAgrawala {
    rpc RequestAccess(RequestAccessRequest) returns (RequestAccessResponse);
    rpc Reply(ReplyRequest) returns (ReplyResponse);
    rpc HealthCheck(Empty) returns (Empty);
}